--- a/fighter_style_analysis.ipynb
+++ b/fighter_style_analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "16ec4f91",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "f948a9a7",
    "metadata": {},
    "outputs": [
@@ -554,7 +554,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pythonproject (3.13.9)",
+   "display_name": "myVenv2",
    "language": "python",
    "name": "python3"
   },
@@ -568,7 +568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
