Add/update fighter_style_analysis_5 notebook

--- a/fighter_style_analysis_5.ipynb
+++ b/fighter_style_analysis_5.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "75249c8c",
+   "metadata": {},
+   "source": [
+    "This notebook was created to take a deeper dive into fighter style and examine how style affects win rate as well as submission type."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "16ec4f91",
@@ -43,6 +51,14 @@
     "    how='left',\n",
     "    validate='many_to_one'   # each fighter_id should map to one row in attrs\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d262c64b",
+   "metadata": {},
+   "source": [
+    "This code prepares a dataset that allows us to analyze how fighters finish their wins (KO/TKO, Submission, or Other finishes) based on their style, stance, weight class, and country. To do this, we start by taking attrs and reducing it to only the columns we need. Then, we select only the fights the fighter won. Lastly, we create a simplified finish category with only three types to make analysis easier, and we merge fighter attributes back into the wins dataset."
    ]
   },
   {
@@ -126,6 +142,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a3c6b227",
+   "metadata": {},
+   "source": [
+    "This code summarizes how different fighting styles tend to finish their wins by computing KO rates, submission rates, and total win counts for each style. To do this, we count how many wins each style earned by knockout, submission, and other. Then, we add this into a cleaner table, and we also add wins and finish rates for each style. Then, we sorted the table by KO rate."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6fe2c99b",
    "metadata": {},
    "source": [
@@ -180,6 +204,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "578d0553",
+   "metadata": {},
+   "source": [
+    "The above code classifies fighters as strikers, merges that into the win dataset, and computes how often strikers vs non-strikers win by KO/TKO, allowing a direct comparison of their finishing tendencies."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "a5054fc1",
@@ -227,7 +259,7 @@
    "id": "5b42ca6f",
    "metadata": {},
    "source": [
-    "This result shows that strikers finish fight by KO at a much higher rate than non-strikers, and the difference is overwhelmingly significant."
+    "The above code performs a two-proportion z-test to determine whether strikers and non-strikers have significantly different KO/TKO win rates, based on the difference between their sample proportions and the variability expected by chance. The results show that strikers do in fact have statistically significant higher KO/TKO win rates."
    ]
   },
   {
@@ -262,6 +294,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "48242576",
+   "metadata": {},
+   "source": [
+    "The above bar chart shows a simple comparison of KO rate between strikers and non-strikers to make the difference easier to visualize."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "31ae298a",
@@ -286,6 +326,14 @@
     "plt.ylabel(\"Proportion of Wins\")\n",
     "plt.xticks(rotation=0)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d7b8042",
+   "metadata": {},
+   "source": [
+    "The bar chart above displays non-striker and strikers with their finish types shown in the different colored bars, which makes it easier to visualize their differences."
    ]
   },
   {
@@ -347,6 +395,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0ee499e2",
+   "metadata": {},
+   "source": [
+    "The above code classifies fighters as grapplers, merges that label into the win dataset, and calculates how often grapplers vs non-grapplers win by submission."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "id": "34fc9d01",
@@ -393,7 +449,7 @@
    "id": "0402cbab",
    "metadata": {},
    "source": [
-    "This p-value illustrates that grapplers do indeed submit more than every other fighting style."
+    "The above code performs a two-proportion z-test to determine whether grapplers have a significantly higher submission win rate than non-grapplers. This p-value illustrates that grapplers do indeed submit more than every other fighting style."
    ]
   },
   {
@@ -429,7 +485,7 @@
    "id": "3044cc97",
    "metadata": {},
    "source": [
-    "This code breaks down the fighters from the perspective of striker, wrestler, BJJ specialist, and MMA generalist."
+    "This code classifies fighters into four major style categories, computes how each style tends to win (KO, submission, or other), and visualizes the finish-type rates for each group."
    ]
   },
   {
@@ -528,27 +584,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "27b150fb",
+   "cell_type": "markdown",
+   "id": "a143ecca",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cramer's V: 0.1617006723639326\n"
-     ]
-    }
-   ],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "n = finish_table.sum().sum()\n",
-    "r, k = finish_table.shape\n",
-    "\n",
-    "cramers_v = np.sqrt(chi2 / (n * (min(r-1, k-1))))\n",
-    "print(\"Cramer's V:\", cramers_v)"
+    "This code tests whether the finish-type distribution (KO, submission, other) is statistically different across fighting style groups using a chi-square independence test. The resulting p-value shows that fighting style definitely has a statistically significant affect on finishing type."
    ]
   }
  ],
