Update markdown in fighter_style_analysis_5 notebook

--- a/fighter_style_analysis_5.ipynb
+++ b/fighter_style_analysis_5.ipynb
@@ -259,7 +259,7 @@
    "id": "5b42ca6f",
    "metadata": {},
    "source": [
-    "The above code performs a two-proportion z-test to determine whether strikers and non-strikers have significantly different KO/TKO win rates, based on the difference between their sample proportions and the variability expected by chance. The results show that strikers do in fact have statistically significant higher KO/TKO win rates."
+    "The above code performs a two-proportion z-test to determine whether strikers and non-strikers have significantly different KO/TKO win rates, based on the difference between their sample proportions and the variability expected by chance. The results show that strikers do in fact have statistically significant higher KO/TKO win rates. We utilized AI to help us create the z test using scipy."
    ]
   },
   {
@@ -298,7 +298,7 @@
    "id": "48242576",
    "metadata": {},
    "source": [
-    "The above bar chart shows a simple comparison of KO rate between strikers and non-strikers to make the difference easier to visualize."
+    "The above bar chart shows a simple comparison of KO rate between strikers and non-strikers to make the difference easier to visualize. Matplotlib was utilized for this."
    ]
   },
   {
@@ -333,7 +333,7 @@
    "id": "0d7b8042",
    "metadata": {},
    "source": [
-    "The bar chart above displays non-striker and strikers with their finish types shown in the different colored bars, which makes it easier to visualize their differences."
+    "The bar chart above displays non-strikers and strikers with their finish types shown in the different colored bars, which makes it easier to visualize their differences. This was also done in Matplotlib."
    ]
   },
   {
@@ -449,7 +449,7 @@
    "id": "0402cbab",
    "metadata": {},
    "source": [
-    "The above code performs a two-proportion z-test to determine whether grapplers have a significantly higher submission win rate than non-grapplers. This p-value illustrates that grapplers do indeed submit more than every other fighting style."
+    "The above code performs a two-proportion z-test to determine whether grapplers have a significantly higher submission win rate than non-grapplers. This p-value illustrates that grapplers do indeed submit more than every other fighting style. Once again, we used AI to hel pcreate the code for scipy."
    ]
   },
   {
@@ -485,7 +485,7 @@
    "id": "3044cc97",
    "metadata": {},
    "source": [
-    "This code classifies fighters into four major style categories, computes how each style tends to win (KO, submission, or other), and visualizes the finish-type rates for each group."
+    "This code classifies fighters into four major style categories, computes how each style tends to win (KO, submission, or other), and visualizes the finish-type rates for each group. The chart uses Matplotlib."
    ]
   },
   {
@@ -588,7 +588,7 @@
    "id": "a143ecca",
    "metadata": {},
    "source": [
-    "This code tests whether the finish-type distribution (KO, submission, other) is statistically different across fighting style groups using a chi-square independence test. The resulting p-value shows that fighting style definitely has a statistically significant affect on finishing type."
+    "This code tests whether the finish-type distribution (KO, submission, other) is statistically different across fighting style groups using a chi-square independence test. The resulting p-value shows that fighting style definitely has a statistically significant affect on finishing type. Once again, scipy was used to make this testing easier along with AI."
    ]
   }
  ],
