Update age_analysis_4 notebook with latest markdown and analysis

--- a/age_analysis_4.ipynb
+++ b/age_analysis_4.ipynb
@@ -304,7 +304,7 @@
    "id": "b90cce60",
    "metadata": {},
    "source": [
-    "This bar chart shows visually how win rate decreases with increasing age group. Next, it is important to test this on a continuous level by using logistic regression to see if there is a negative correlation between age increase and win rate."
+    "This bar chart shows visually how win rate decreases with increasing age group. Next, it is important to test this on a continuous level by using logistic regression to see if there is a negative correlation between age increase and win rate. Matplotlib and AI were used to do statistical testing and graphing."
    ]
   },
   {
@@ -356,7 +356,7 @@
    "id": "104c92a6",
    "metadata": {},
    "source": [
-    "The above code is doing the math behind the logistic regression that we want to plot. This line: logit_model = sm.Logit(y,x).fit() is fitting the model to show probability of winning as a function of age at fight."
+    "The above code is doing the math behind the logistic regression that we want to plot. This line: logit_model = sm.Logit(y,x).fit() is fitting the model to show probability of winning as a function of age at fight. This regression was done using statsmodels.api and chat gpt."
    ]
   },
   {
@@ -503,7 +503,7 @@
    "id": "54e062cd",
    "metadata": {},
    "source": [
-    "Once again, the above code is doing the math behind the linear regression in order to allow us to accurately plot what the data looks like in regard to knockout risk and age."
+    "Once again, the above code is doing the math behind the linear regression in order to allow us to accurately plot what the data looks like in regard to knockout risk and age. This was done using chat gpt."
    ]
   },
   {
@@ -924,7 +924,9 @@
     "\n",
     "Style dummy variables — do certain styles get KO’d more often?\n",
     "\n",
-    "Adding a constant term allows the model to learn an intercept."
+    "Adding a constant term allows the model to learn an intercept.\n",
+    "\n",
+    "As before, we utilized AI to help us with the regression."
    ]
   },
   {
